--- a/survey.css
+++ b/survey.css
@@ -1,10 +1,11 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 h1, h1 + p {
@@ -13,26 +14,98 @@ h1, h1 + p {
 }
 
 .container {
-    display: flex;
-    width: 65%;
-    margin: auto;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
     background-color: yellowgreen;
-    justify-content: center;
+    padding: 1em;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6)
 }
 
-.text-input {
+.wrapper form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
+
+form .text-input {
+    grid-column: 1 / 3;
+}
+
+form .input-box {
+    margin-top: 5px;
+    padding: 1em;
+    width: 100%;
+}
+
+form p {
+    margin: 1em auto .5em auto;
+    grid-column: 1 / 3;
+}
+
+form .selection, form .radios, form .checks, form textarea, form button {
+    grid-column: 1 / 3;
+}
+
+form .radios, form .checks {
     display: flex;
-    justify-content: space-between;
-    width: 80%;
-    padding: 10px;
-    margin: 1rem auto;
-    /* border: 1px solid black; */
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
-.input-box {
-    height: 2rem;
-    font-size: 1rem;
-    width: 350px;
-    margin-left: 20px;
-    padding: 3px;
+form .checks label {
+    margin-bottom: 10px;
+}
+
+form .message {
+    grid-column: 1 / 3;
+}
+
+textarea {
+    width: 100%;
+}
+
+.center {
+    text-align: center;
+}
+
+select, button {
+    background: #3A4D13;
+    width: 100%;
+    padding: 10px;
+    font-size: 1em;
+    color: #ddd;
+    border: 0;
+}
+
+@media(min-width: 530px) {
+    form .radios, form .checks {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: start;
+    }
+
+    form .radios label, form .checks label {
+        margin-left: 20%;
+    }
+}
+
+
+@media(min-width: 700px) {
+    form .text-input {
+        grid-column: 1 / 2;
+        margin-top: 0;
+    }
+
+    form .selection, form .radios, form .checks {
+        grid-column: 2 / 3;
+    }
+
+    form .selection {
+        grid-row: 1 / 2;
+    }
+
+    form .radios {
+        grid-row: 2 / 3;
+    }
 }
